# TMChat

./: .gitattributes  .gitignore  Build.cmd  CONTRIBUTING.md  Clean.cmd  LICENSE  Makefile  Makefile.am  README.md  TMChat.sln  config.h  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
src/: TMChat.sln
src/client/: Makefile.am.inc  client.vcxproj  client.vcxproj.filters
src/client/cpp/: client.cpp  main.cpp
src/client/include/: client.hpp
src/common/: Makefile.inc  protocol.hpp  tmchat.h
src/prep/: Makefile.am.inc  Makefile.inc
src/prep/include/: compiler.h  concurrent_list.hpp  concurrent_queue.hpp  cpp_std.h  event.hpp  namespace.hpp  os.h  os_net.h  os_net_defs.h  prep.h  semaphore.hpp
src/prep/include/details/: compiler_clang.i  compiler_gcc.i  compiler_msvc.i
src/protocol/: protocol.hpp
src/server/: Makefile  Makefile.am.inc  server.vcxproj  server.vcxproj.filters
src/server/cpp/: main.cpp  server.cpp
src/server/include/: i_database.hpp  local_database.hpp  server.hpp  tmchat.h
src/tmsocket/: Makefile  Makefile.am.inc  tmsocket.vcxproj  tmsocket.vcxproj.filters
src/tmsocket/cpp/: client_communicator.cpp  client_stream.cpp  cs_stream.cpp  netexcept.cpp  server_communicator.cpp  server_stream.cpp  socket_stream.cpp  tmsocket.cpp
src/tmsocket/cpp/details/: protocol.ipp  socket_impl.ipp
src/tmsocket/include/: client_communicator.hpp  client_stream.hpp  defs.hpp  netexcept.hpp  server_communicator.hpp  server_stream.hpp  socket_stream.hpp  tmsocket.hpp
src/tmsocket/include/details/: socket_stream.ipp
